; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_darwin.c_uv_get_free_memory.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_darwin.c_uv_get_free_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@HOST_VM_INFO = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8
@UV_EINVAL = common dso_local global i32 0, align 4
@_SC_PAGESIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_get_free_memory() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_2__, align 8
  %3 = alloca i32, align 4
  store i32 2, i32* %3, align 4
  %4 = call i32 (...) @mach_host_self()
  %5 = load i32, i32* @HOST_VM_INFO, align 4
  %6 = ptrtoint %struct.TYPE_2__* %2 to i32
  %7 = call i64 @host_statistics(i32 %4, i32 %5, i32 %6, i32* %3)
  %8 = load i64, i64* @KERN_SUCCESS, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %0
  %11 = load i32, i32* @UV_EINVAL, align 4
  store i32 %11, i32* %1, align 4
  br label %19

12:                                               ; preds = %0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = trunc i64 %14 to i32
  %16 = load i32, i32* @_SC_PAGESIZE, align 4
  %17 = call i32 @sysconf(i32 %16)
  %18 = mul nsw i32 %15, %17
  store i32 %18, i32* %1, align 4
  br label %19

19:                                               ; preds = %12, %10
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i64 @host_statistics(i32, i32, i32, i32*) #1

declare dso_local i32 @mach_host_self(...) #1

declare dso_local i32 @sysconf(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
